@@ -17,6 +17,7 @@ lib/Hailo/Role/Engine.pm
 lib/Hailo/Role/Generic.pm
 lib/Hailo/Role/Storage.pm
 lib/Hailo/Role/Tokenizer.pm
+lib/Hailo/Storage/mysql.pm
 lib/Hailo/Storage/Perl.pm
 lib/Hailo/Storage/Pg.pm
 lib/Hailo/Storage/SQL.pm
